crates/parser/tests/snapshots/block_string_folded.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-folded

## Input

```
text >
  This is a long
  sentence split
  over lines.

  New paragraph.

```

## CST

```
SOURCE_FILE@0..73
  ENTRY@0..72
    WORD_KEY@0..4
      WORD@0..4 "text"
    SPACE@4..5 " "
    BLOCK_STRING@5..72
      BLOCK_STRING_HEADER@5..7
        GT@5..6 ">"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..23
        STRING@9..23 "This is a long"
      NEWLINE@23..24 "\n"
      SPACE@24..26 "  "
      LINE_STRING@26..40
        STRING@26..40 "sentence split"
      NEWLINE@40..41 "\n"
      SPACE@41..43 "  "
      LINE_STRING@43..54
        STRING@43..54 "over lines."
      NEWLINE@54..55 "\n"
      LINE_STRING@55..55
      NEWLINE@55..56 "\n"
      SPACE@56..58 "  "
      LINE_STRING@58..72
        STRING@58..72 "New paragraph."
  NEWLINE@72..73 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..4 "text",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@5..6 ">",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@9..23 "This is a long",
                    },
                    LineString {
                        string: STRING@26..40 "sentence split",
                    },
                    LineString {
                        string: STRING@43..54 "over lines.",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@58..72 "New paragraph.",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
