crates/parser/tests/snapshots/block_string_folded_extra_indent_empty_line.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 405
---
# block-string-folded-extra-indent-empty-line

## Input

```
key >
  a
    b

  c

```

## CST

```
SOURCE_FILE@0..21
  ENTRY@0..21
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..20
      BLOCK_STRING_HEADER@4..6
        GT@4..5 ">"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..9
        STRING@8..9 "a"
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      LINE_STRING@12..15
        STRING@12..15 "  b"
      NEWLINE@15..16 "\n"
      LINE_STRING@16..16
      NEWLINE@16..17 "\n"
      SPACE@17..19 "  "
      LINE_STRING@19..20
        STRING@19..20 "c"
    NEWLINE@20..21 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..9 "a",
                    },
                    LineString {
                        string: STRING@12..15 "  b",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@19..20 "c",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
