crates/parser/tests/snapshots/block_string_folded_keep.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-folded-keep

## Input

```
text >+
  first
  second

a b

```

## CST

```
SOURCE_FILE@0..30
  ENTRY@0..25
    WORD_KEY@0..4
      WORD@0..4 "text"
    SPACE@4..5 " "
    BLOCK_STRING@5..25
      BLOCK_STRING_HEADER@5..8
        GT@5..6 ">"
        PLUS@6..7 "+"
        NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..15
        STRING@10..15 "first"
      NEWLINE@15..16 "\n"
      SPACE@16..18 "  "
      LINE_STRING@18..24
        STRING@18..24 "second"
      NEWLINE@24..25 "\n"
      LINE_STRING@25..25
  NEWLINE@25..26 "\n"
  ENTRY@26..29
    WORD_KEY@26..27
      WORD@26..27 "a"
    SPACE@27..28 " "
    LINE_STRING@28..29
      STRING@28..29 "b"
  NEWLINE@29..30 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..4 "text",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@5..6 ">",
                    chomp: PLUS@6..7 "+",
                },
                lines: [
                    LineString {
                        string: STRING@10..15 "first",
                    },
                    LineString {
                        string: STRING@18..24 "second",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@26..27 "a",
            },
            value: LineString {
                string: STRING@28..29 "b",
            },
        },
    ],
}
```

vim:ft=markdown
